apps/filebrowser/ingressroute.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
  namespace: filebrowser
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.cherkaoui.ch`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: filebrowser-filebrowser-quantum
          port: 8080
  tls:
    certResolver: letsencrypt
